[gd_scene load_steps=27 format=3 uid="uid://drmaubupv57n1"]

[ext_resource type="Script" path="res://scenes/enemies/MoldedDruvar/MoldedDruvar.gd" id="1_ba1y1"]
[ext_resource type="PackedScene" uid="uid://kb8mhtyak1ki" path="res://scripts/components/watchersynchronizercomponent/WatcherSynchronizerComponent.tscn" id="2_82l3i"]
[ext_resource type="PackedScene" uid="uid://c5tliladmodux" path="res://scripts/components/positionsynchronizercomponent/PositionSynchronizerComponent.tscn" id="3_evc6g"]
[ext_resource type="PackedScene" uid="uid://c8cji8g03ayyx" path="res://scripts/components/statssynchronizercomponent/StatsSynchronizerComponent.tscn" id="4_q10uy"]
[ext_resource type="PackedScene" uid="uid://dcomdkqapr25s" path="res://scripts/components/floatingtextcomponent/FloatingTextComponent.tscn" id="5_305lq"]
[ext_resource type="PackedScene" uid="uid://bjjk2cftt2cex" path="res://scripts/components/actionsynchronizercomponent/ActionSynchronizerComponent.tscn" id="5_aextl"]
[ext_resource type="PackedScene" uid="uid://chhiamhxxhm3v" path="res://scripts/components/interfacecomponent/InterfaceComponent.tscn" id="5_y1ndl"]
[ext_resource type="PackedScene" uid="uid://dikf715gqy3x" path="res://scripts/components/enemyrespawncomponent/EnemyRespawnComponent.tscn" id="6_lms8h"]
[ext_resource type="PackedScene" uid="uid://pateh36oi60s" path="res://scripts/components/lootcomponent/LootComponent.tscn" id="6_vd6gg"]
[ext_resource type="PackedScene" uid="uid://dfkcs65b1vpi3" path="res://scripts/components/updatefacecomponent/UpdateFaceComponent.tscn" id="7_lx7n7"]
[ext_resource type="PackedScene" uid="uid://c0p6pnjudl1v" path="res://scripts/components/animationcomponent/AnimationComponent.tscn" id="8_7r242"]
[ext_resource type="PackedScene" uid="uid://dv6a22n6h5bly" path="res://scripts/components/avoidancerayscomponent/AvoidanceRaysComponent.tscn" id="9_whu8q"]
[ext_resource type="Script" path="res://addons/beehave/nodes/beehave_tree.gd" id="10_xhds1"]
[ext_resource type="PackedScene" uid="uid://clyv1sf3bn5g0" path="res://scenes/enemies/common/ai/selectors/aggressive_mob/AggressiveMob.tscn" id="11_l62gi"]
[ext_resource type="Texture2D" uid="uid://bklewt71b0gcw" path="res://assets/images/enemies/moldeddruvar/scaled/moldeddruvar_backhand.png" id="12_jf6n7"]
[ext_resource type="Texture2D" uid="uid://dbsx18d3552ie" path="res://assets/images/enemies/moldeddruvar/scaled/moldeddruvar_backleg.png" id="13_kdama"]
[ext_resource type="Texture2D" uid="uid://cg1nuxf3ixuty" path="res://assets/images/enemies/moldeddruvar/scaled/moldeddruvar_topleg.png" id="14_2qow6"]
[ext_resource type="Texture2D" uid="uid://dvlo4ub355s4d" path="res://assets/images/enemies/moldeddruvar/scaled/moldeddruvar_trunk.png" id="15_hc1o0"]
[ext_resource type="Texture2D" uid="uid://cxjby57l51iuk" path="res://assets/images/enemies/moldeddruvar/scaled/moldeddruvar_Head.png" id="16_uq0hp"]
[ext_resource type="Texture2D" uid="uid://bolb8af6ilhbg" path="res://assets/images/enemies/moldeddruvar/scaled/moldeddruvar_tophand.png" id="17_ltm6o"]
[ext_resource type="Script" path="res://addons/beehave/blackboard.gd" id="20_vnsr5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n3uon"]
radius = 17.0
height = 108.0

[sub_resource type="Animation" id="Animation_ag5mw"]
resource_name = "Idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/RemoteBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/RemoteBody:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.164443]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/RemoteBody/RemoteBackHand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-5, -30), Vector2(-5, -30)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/RemoteBody/RemoteBackHand:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.267833]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton/RemoteBody/RemoteBackLeg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-3, 2), Vector2(-3, 2)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton/RemoteBody/RemoteBackLeg:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.209184]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Skeleton/RemoteBody/RemoteTopLeg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(11, 2), Vector2(11, 2)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Skeleton/RemoteBody/RemoteTopLeg:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.158149]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Skeleton/RemoteBody/RemoteHead:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4, -40), Vector2(4, -40), Vector2(4, -40)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Skeleton/RemoteBody/RemoteHead:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0765076, -0.534045]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Skeleton/RemoteBody/RemoteTopHand:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, -30), Vector2(16, -30)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Skeleton/RemoteBody/RemoteTopHand:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.327285]
}

[sub_resource type="Animation" id="Animation_qar2a"]
resource_name = "Move"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/RemoteBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, -1), Vector2(0, 1), Vector2(0, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/RemoteBody:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.174533, 0.297548, -0.174533, 0.297548]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/RemoteBody/RemoteBackHand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-5, -30), Vector2(-5, -30)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/RemoteBody/RemoteBackHand:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.589516, 0.454706]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton/RemoteBody/RemoteBackLeg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-3, 2), Vector2(-3, 2), Vector2(-3, 2)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton/RemoteBody/RemoteBackLeg:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.474308, -0.605348, -0.401938]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Skeleton/RemoteBody/RemoteTopLeg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(11, 2), Vector2(11, 2), Vector2(11, 2), Vector2(11, 2)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Skeleton/RemoteBody/RemoteTopLeg:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.111262, 0.633217, 0.494843, -0.429411]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Skeleton/RemoteBody/RemoteHead:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, -40), Vector2(4, -40), Vector2(4, -40), Vector2(4, -40)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Skeleton/RemoteBody/RemoteHead:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.174533, 0.174533, -0.174533, 0.174533]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Skeleton/RemoteBody/RemoteTopHand:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, -30), Vector2(16, -30)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Skeleton/RemoteBody/RemoteTopHand:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.589516, 0.454706]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sumus"]
_data = {
"Idle": SubResource("Animation_ag5mw"),
"Move": SubResource("Animation_qar2a")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_dqm6v"]
radius = 200.0

[node name="MoldedDruvar" type="CharacterBody2D"]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_ba1y1")

[node name="WatcherSynchronizerComponent" parent="." instance=ExtResource("2_82l3i")]

[node name="PositionSynchronizerComponent" parent="." node_paths=PackedStringArray("watcher_synchronizer") instance=ExtResource("3_evc6g")]
watcher_synchronizer = NodePath("../WatcherSynchronizerComponent")

[node name="StatsSynchronizerComponent" parent="." node_paths=PackedStringArray("watcher_synchronizer") instance=ExtResource("4_q10uy")]
watcher_synchronizer = NodePath("../WatcherSynchronizerComponent")
hp_max = 85
hp = 85
attack_power_min = 20
attack_power_max = 50
attack_speed = 2.0
defense = 8
movement_speed = 75.0
experience_worth = 80

[node name="ActionSynchronizerComponent" parent="." node_paths=PackedStringArray("watcher_synchronizer") instance=ExtResource("5_aextl")]
watcher_synchronizer = NodePath("../WatcherSynchronizerComponent")

[node name="LootComponent" parent="." node_paths=PackedStringArray("stats") instance=ExtResource("6_vd6gg")]
stats = NodePath("../StatsSynchronizerComponent")

[node name="EnemyRespawnComponent" parent="." node_paths=PackedStringArray("stats") instance=ExtResource("6_lms8h")]
stats = NodePath("../StatsSynchronizerComponent")

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("animation_player", "stats", "action_synchronizer") instance=ExtResource("8_7r242")]
animation_player = NodePath("../AnimationPlayer")
stats = NodePath("../StatsSynchronizerComponent")
action_synchronizer = NodePath("../ActionSynchronizerComponent")

[node name="UpdateFaceComponent" parent="." node_paths=PackedStringArray("skeleton", "action_synchronizer") instance=ExtResource("7_lx7n7")]
skeleton = NodePath("../Skeleton")
action_synchronizer = NodePath("../ActionSynchronizerComponent")

[node name="InterfaceComponent" parent="." node_paths=PackedStringArray("stats_synchronizer") instance=ExtResource("5_y1ndl")]
offset_top = -96.0
offset_bottom = -56.0
stats_synchronizer = NodePath("../StatsSynchronizerComponent")

[node name="FloatingTextComponent" parent="." node_paths=PackedStringArray("stats_synchronizer") instance=ExtResource("5_305lq")]
stats_synchronizer = NodePath("../StatsSynchronizerComponent")

[node name="Sprites" type="Node2D" parent="."]
position = Vector2(6.88, -65)

[node name="BackHand" type="Sprite2D" parent="Sprites"]
position = Vector2(-8.865, -5.14763)
rotation = 0.819659
texture = ExtResource("12_jf6n7")
offset = Vector2(9, 16)

[node name="BackLeg" type="Sprite2D" parent="Sprites"]
position = Vector2(-16.3345, 26.0326)
rotation = -0.307801
scale = Vector2(1, 1)
texture = ExtResource("13_kdama")
offset = Vector2(8, -13)

[node name="TopLeg" type="Sprite2D" parent="Sprites"]
position = Vector2(-2.94971, 30.1371)
rotation = 0.930764
scale = Vector2(1, 1)
texture = ExtResource("14_2qow6")
offset = Vector2(-5, -13)

[node name="Body" type="Sprite2D" parent="Sprites"]
position = Vector2(-12.88, 25)
rotation = 0.297548
texture = ExtResource("15_hc1o0")
offset = Vector2(3, -13)

[node name="Head" type="Sprite2D" parent="Sprites"]
position = Vector2(2.6713, -12.0696)
rotation = 0.472081
texture = ExtResource("16_uq0hp")
offset = Vector2(1, 27)

[node name="TopHand" type="Sprite2D" parent="Sprites"]
position = Vector2(11.2122, 1.00908)
rotation = 0.819659
texture = ExtResource("17_ltm6o")
offset = Vector2(-11, 19)

[node name="Skeleton" type="Node2D" parent="."]
position = Vector2(-6, -39)

[node name="RemoteBody" type="RemoteTransform2D" parent="Skeleton"]
position = Vector2(0, -1)
rotation = 0.297548
remote_path = NodePath("../../Sprites/Body")

[node name="RemoteBackHand" type="RemoteTransform2D" parent="Skeleton/RemoteBody"]
position = Vector2(-5, -30)
rotation = 0.522111
remote_path = NodePath("../../../Sprites/BackHand")

[node name="RemoteBackLeg" type="RemoteTransform2D" parent="Skeleton/RemoteBody"]
position = Vector2(-3, 2)
rotation = -0.605348
remote_path = NodePath("../../../Sprites/BackLeg")

[node name="RemoteTopLeg" type="RemoteTransform2D" parent="Skeleton/RemoteBody"]
position = Vector2(11, 2)
rotation = 0.633217
remote_path = NodePath("../../../Sprites/TopLeg")

[node name="RemoteHead" type="RemoteTransform2D" parent="Skeleton/RemoteBody"]
position = Vector2(4, -40)
rotation = 0.174533
remote_path = NodePath("../../../Sprites/Head")

[node name="RemoteTopHand" type="RemoteTransform2D" parent="Skeleton/RemoteBody"]
position = Vector2(16, -30)
rotation = 0.522111
remote_path = NodePath("../../../Sprites/TopHand")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -48)
shape = SubResource("CapsuleShape2D_n3uon")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sumus")
}

[node name="AvoidanceRays" parent="." instance=ExtResource("9_whu8q")]

[node name="StuckTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="AggroRadius" type="Area2D" parent="."]
position = Vector2(0, -45)
scale = Vector2(1.00615, 1)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRadius"]
position = Vector2(0, 44)
shape = SubResource("CircleShape2D_dqm6v")

[node name="BeehaveTree" type="Node" parent="."]
script = ExtResource("10_xhds1")
enabled = false
actor_node_path = NodePath("..")

[node name="AggressiveMob" parent="BeehaveTree" node_paths=PackedStringArray("aggro_radius") instance=ExtResource("11_l62gi")]
aggro_radius = NodePath("../../AggroRadius")

[node name="Blackboard" type="Node" parent="."]
script = ExtResource("20_vnsr5")
